# Project-Manager

./: .claudeignore  .dev-pilot.json  .env.example  .gitignore  .project-manager-installed  .project-manager.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  GEMINI.md  LICENSE  README.md  README.zh-Hant.md  dev.sh  next.config.mjs  package-lock.json  package.json  playwright.config.ts  start_project_manager.sh  tailwind.config.ts  tsconfig.json  vitest.config.ts
.claude/: launch.json  settings.json
.codex/: hooks.json
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.project-manager/: config.json
__tests__/: BatchDispatchModal.state.test.tsx  BottomSheetTabs.reorder.test.tsx  BrowserRegistry.iframe-preview.test.ts  BrowserRegistry.native-lifecycle.test.ts  BrowserSlot.native-bounds.test.tsx  CodeEditor.test.tsx  CompanyStandardsView.test.tsx  DocumentationView.test.tsx  FolderContent.test.tsx  IssuesTab.test.tsx  MainClient.lazy-routes.test.tsx  MainClient.real-checkbox.test.tsx  MainClient.sync.test.tsx  ProjectFilesView.test.tsx  ProjectsView.add-project.test.tsx  ProjectsView.reinit.test.tsx  SettingsView.sheet-layout.test.tsx  SkillsView.delete.test.tsx  TopBar.chat-resize.test.tsx  XmuxView.width-fit.test.tsx  adapterRegistry.plugin.test.ts  admin.auditLogs.test.tsx  admin.members.test.tsx  agentArchitecturePrompt.test.ts  agentWorkflowDag.test.ts  agentWorkflows.test.ts  ai-assistants.console.test.tsx  ai-assistants.terminal-block-suggestions.test.ts  ai-assistants.terminal-boundaries.test.ts  (+207 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: build-agent-runtime-snapshot.json  list-agent-runtime-redacted-session-targets.json  read-agent-runtime-redacted-session-content.json  read-agent-runtime-redacted-session-envelope.json  read-agent-runtime-session-boundary.json
src-tauri/src/: dev_secrets.rs  lib.rs  llm_router_probe.rs  llm_router_sli.rs  main.rs  terminal_boundaries.rs  xmux_webview.rs
(+1195 files in other folders)
