[package]
name = "project-manager"
version = "0.1.0"
description = "Project Manager — Context-Aware Engineering Dashboard"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "project_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["unstable", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# keyring v3 ships an in-memory "sample" store by default — saves succeed in
# the running process but do not persist across launches. Each platform's
# real backend is gated behind an explicit feature flag.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
base64 = "0.22"
tauri-plugin-pty = "0.2.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
